fix for feature-image-behind height

--- a/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
@@ -229,6 +229,7 @@
     }
 
     .featured-image-behind {
+        min-height: auto !important;
         .entry-header {
             @include desktop {
                 max-width: 58.334%;
